# STATIC

./: .dockerignore  bot.py  keep_alive.py  package-lock.json  pyproject.toml  replit_zip_error_log.txt  requirements.txt
config/: application_config.json  config.json  messages.json
modules/: bot_commands.py  logger.py
session/: static.bot  static.bot.session
utils/: config.py
