[tool.poetry]
name = "sphinx"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
keep-alive = "^0.0.1"
flask-access = "^0.1.2"
nextcord = "^2.4.0"
pytz = "^2022.7.1"
python-dotenv = "^0.21.1"
timeout = "^0.1.2"
requests = "^2.28.2"
instaloader = "^4.9.6"
selenium = "^4.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
